@@ -122,14 +122,16 @@ max_class_var_length (Class class)
 
 - update 
 {
-  id index;
-  id a_widget;
-
-  index = [widgets begin: [self getZone]];
-  while ((a_widget = [index next]) != nil)
-    [a_widget update];
-  [index drop];
-  
+  if (!markedForDropFlag)
+    {
+      id index;
+      id a_widget;
+      
+      index = [widgets begin: [self getZone]];
+      while ((a_widget = [index next]) != nil)
+        [a_widget update];
+      [index drop];
+    }
   return self;
 }
 
